--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "styled-components": "^6.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
